# volumential

./: .conda-ci-build-configure.sh  .gitignore  .gitlab-ci.yml  .gitmodules  .pylintrc-local.yml  .test-conda-env-py3-macos.yml  .test-conda-env-py3.yml  .typos.toml  ACKNOWLEDGEMENTS.md  AGENTS.md  DEVELOPMENT.md  LICENSE.md  MANIFEST.in  MODERNIZATION_PLAN.md  README.md  bench_cpu_vs_gpu_helm2d_mms.json  bench_cpu_vs_gpu_large_q15.json  mms_helmholtz2d_fmm_order_sweep_gpu.json  mms_helmholtz2d_split_pconv_final_case_q7n4_fmm20_p1to6.csv  mms_helmholtz2d_split_pconv_final_case_q7n4_fmm20_p1to6.json  mms_helmholtz2d_split_sweep_gpu.json  mms_helmholtz3d_q7n4_rerun_and_continue_pocl_cpu.json  mms_helmholtz3d_small_rerun_cuda_q5n3.json  mms_helmholtz3d_split_pconv_q5n3_k10_alpha80_p1to6.csv  mms_helmholtz3d_split_pconv_q5n3_k10_alpha80_p1to6.json  mms_helmholtz3d_split_pconv_q5n4_targeted_p1p3.json  mms_helmholtz3d_split_pconv_scan.json  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci-full.yml  ci.yml
benchmarks/: README.md  accuracy_preservation.py  adaptive_timing.py  dmk_effective_density.py  gaussian_free_space.py  pde_target_compression.py  performance_suite.py  scalar_field.py  split_parameter_sweep.py  table_build.py  table_equivalence_cache.py
contrib/: README.md
contrib/meshgen11_dealii/: CMakeLists.txt  LICENSE.md  Makefile  README.md  build.sh  meshgen.cpp
contrib/meshgen_dealii/: CMakeLists.txt  Makefile  README.md  build.sh  meshgen.cpp
contrib/table_builders/: laplace3d_table_builder.py
contrib/utilities/: reformat.sh  style.yapf  update-copyright.sh
contrib/vim-pyopencl/neoformat/: pyopencl.vim
doc/: Makefile  make.bat
doc/source/: conf.py  derivative_support.rst  development.rst  helmholtz_split.rst  index.rst  install.rst  intro.rst  m1_kernels.rst  nearfield_symmetry.rst  periodic_tail_hybrid.rst  sphinx.rst  validation_matrix.rst
doc/source/api/: modules.rst
docker/: Dockerfile.firedrake  Dockerfile.firedrake_jupyterlab  Dockerfile.firedrake_jupyterlab_vim  start_jupyterlab.sh  to_loopyy.sh
examples/: biharmonic.py  branched_flow_helmholtz2d.py  build_nearfield_table.py  build_tree.py  cahn-hilliard.py  constant.py  constant3d.py  convert_grid  dice.step  fmm_convergence.py  helmholtz2d.py  helmholtz2d_split_p_convergence.py  helmholtz3d.py  helmholtz3d_split_p_convergence.py  helmholtz3d_split_p_convergence_from_q5n3.csv  helmholtz3d_volumential.ipynb  laplace.py  laplace2d.py  laplace3d.py  larger_box.py  list1.py  periodic_laplace_benchmark.py  periodic_tail_hybrid_experiment.py  periodic_tail_hybrid_sweep.py  poisson2d_pytential_volumential.ipynb  poisson3d.py  poisson3d_volumential.ipynb  table_urls.json  use_sumpy_kernel.py  volume_potential_2d.py  volume_potential_3d.py
examples/poisson3d_bvp/: configs.py  dice.brep  finalize_solu.py  imports.py  main_solver.py  make_mesh.py  postprocess.py  prepare_bc.py  solve_bvp.py
examples/poisson3d_bvp/postprocessors/: plot_boxtree.py  write_box_vtu.py  write_vtu.py
examples/poisson3d_bvp/source_field/: constant_one.py
examples/poisson_bvp/: build_table.py  clear.sh  configs.py  convert_grid  finalize_solu.py  imports.py  main_solver.py  make_mesh.py  postprocess.py  prepare_bc.py  solve_bvp.py
examples/poisson_bvp/postprocessors/: plot_boxtree.py  write_box_vtu.py  write_vtu.py
examples/poisson_bvp/source_field/: constant_one.py
experiments/: biharmonic.py  ch_with_extension.py  extension_biharmonic.py  qbfem.py  sep.py  table_urls.json  volume_potential_2d_derivatives.py  volume_potential_3d_derivatives.py
resources/notebooks/brick-mapping/: Singular box quadrature.ipynb
resources/notebooks/cahn_hilliard/: biharmonic_check.ipynb  ch_experiments.ipynb  circle.step  convert_grid  kernel_laplacian.ipynb  quad_yard.ipynb
resources/notebooks/coef_matrix/: Untitled.ipynb  coef_matrix.npy  hankel.ipynb  rhs-000.npy  rhs-001.npy  rhs-002.npy  rhs-003.npy  rhs-004.npy
resources/notebooks/kernel_quad/: quad.ipynb
resources/notebooks/plots/: Droste.ipynb  near_far_field.ipynb  volume_and_boundary_meshes.ipynb
test/: _duffy_test_utils.py  conftest.py  test_benchmark_helpers.py  test_branched_flow_example.py  test_cahn_hilliard.py  test_dmk_split.py  test_droste.py  test_duffy_batched_manufactured.py  test_duffy_full_accuracy.py  test_duffy_tanh_sinh.py  test_executor_cache_helpers.py  test_expansion_wrangler_interface.py  test_function_extension.py  test_function_extension_helpers.py  test_gaussian.py  test_import.py  test_interpolation.py  test_lagrange.py  test_laplace.py  test_laplace3d.py  test_list1_gallery.py  test_meshgen_bbox.py  test_nearfield_interaction_completeness.py  test_nearfield_potential_table.py  test_periodic_volume_fmm.py  test_singular_integral_2d.py  test_table_builder_symmetry.py  test_table_manager.py  test_table_manager_2.py  test_table_manager_sqlite_migration.py  test_tree_interactive_build.py  test_version.py  test_volume_fmm.py
volumential/: __init__.py  dmk_split.py  droste.py  expansion_wrangler_fpnd.py  expansion_wrangler_interface.py  function_extension.py  gaussian.py  geometry.py  interpolation.py  lagrange.py  list1.py  list1_gallery.py  list1_symmetry.py  meshgen.py  meshgen_boxtree.py  nearfield_pde_targets.py  nearfield_potential_table.py  orbit_arithmetic.py  pickle_class_method.py  singular_integral_2d.py  symbolic.py  table_manager.py  tools.py  tree_interactive_build.py  version.py  volume_fmm.py
volumential/qbfem/: __init__.py  mesh.py
